--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -6,11 +6,11 @@
 $text-color: #222222 !default;
 $muted-text-color: $text-color !default;
 /*$primary-color: #ff0000 !default; o tambien rojo: #C44536*/
-$primary-color: #E15554 !default;
+$primary-color: #222222 !default;
 $border-color: mix(#fff, $text-color, 75%) !default;
-$footer-background-color: #197278 !default;
+$footer-background-color: #222222 !default;
 /* $link-color: #0000ff !default; o tambien  #197278 */
-$link-color: #24A2AB !default;
+$link-color: #222222 !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
