Update _contrast.scss with new link color

--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -9,8 +9,7 @@ $muted-text-color: $text-color !default;
 $primary-color: #222222 !default;
 $border-color: mix(#fff, $text-color, 75%) !default;
 $footer-background-color: #222222 !default;
-/* $link-color: #0000ff !default; o tambien  #197278 */
-$link-color: #222222 !default;
+$link-color: #0000ff !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
